bug fixed, navbar added, visible-bugs:0

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 #container{
     position: relative;
-    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
