--- a/src/components/click-speed/click-speed.scss
+++ b/src/components/click-speed/click-speed.scss
@@ -1,13 +1,14 @@
 @import "../scss/variables";
 
 #click-speed-container {
-  max-width: 32rem;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
-  background: $background-color;
-  border-radius: 0.5rem;
   position: relative;
+  margin: 2rem 0 0  ;
+  max-width: 32rem;
+  background: $background-color;
+  padding: 1rem;
+  border-radius: 0.5rem;
   z-index: 10;
 
   @media (max-width: 550px) {
