--- a/src/components/scss/_variables.scss
+++ b/src/components/scss/_variables.scss
@@ -9,7 +9,6 @@ $secondary-button-color-hover: #abbbcc;
 $primary-color: #86d9e7;
 $text-color: #ddfdfa;
 $background-color: #282c2f;
-$background-color: #282c2f;
 $high-score-background-color: #333b3f;
 $button-color: #5c84eb;
 $button-color-hover: rgb(78, 112, 197);
